--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -59,7 +59,7 @@
         </div>
       <% end %> 
 
-      <% if current_user.nil? || !@project.user.id.to_s.eql?(current_user.id.to_s) %>
+      <% if current_user.nil? || ( @project.user && current_user && !@project.user.id.to_s.eql?(current_user.id.to_s) ) %>
         <div style="padding-top: 10px;">
           <b>Created by:</b> <%= link_to @project.user.fullname, user_path(@project.user) %>
         </div>
@@ -130,7 +130,7 @@
               <a data-target="#security" data-toggle="tab" onclick="page_view('ga_project_security')"><i class = "icon-tasks">&nbsp;</i>Security</a>
             </li>
           <% end %>
-          <% if signed_in? && @project.user.id.to_s.eql?( current_user.id.to_s ) %>
+          <% if signed_in? && @project.user && @project.user.id.to_s.eql?( current_user.id.to_s ) %>
             <li>
               <a data-target="#collaborators" data-toggle="tab" onclick="page_view('ga_project_collaborators')"><i class = "icon-group">&nbsp;</i>Collaborators</a>
             </li>
@@ -177,7 +177,7 @@
 
           <div id="licenses" class="tab-pane">
 
-            <% if signed_in? && @project.user.id.to_s.eql?( current_user.id.to_s ) %>
+            <% if signed_in? && @project.user && @project.user.id.to_s.eql?( current_user.id.to_s ) %>
               <%= render "user/projects/helpers/license_whitelist_picker" %>
             <% end %>
 
