--- a/app/views/shared/_product_license_table.html.erb
+++ b/app/views/shared/_product_license_table.html.erb
@@ -78,7 +78,7 @@
 
   <% end %>
 </table>
-<% if !project_id.nil? && !project_id.to_s.empty? && !license_whitelist_id.to_s.empty? %> 
+<% if display_pdf_expoert && display_pdf_expoert == true && !project_id.nil? && !project_id.to_s.empty? && !license_whitelist_id.to_s.empty? %> 
   <div style="margin-top: 10px;">
     <%= link_to 'PDF Export', lwl_export_user_project_path( project_id ) %>
   </div>
@@ -112,50 +112,50 @@
 <br/><br/>
 <% end %> 
 
-
-<% license_hash.sort.map do |license_name, value| %>
-  <div>
-    <% if license_name.eql?("unknown") %>
-      <span class="label label-warning"><%= license_name %></span>
-    <% else %>
-      <span ><%= license_name %></span>
+<% if display_grouping && display_grouping == true %>
+  <% license_hash.sort.map do |license_name, value| %>
+    <div>
+      <% if license_name.eql?("unknown") %>
+        <span class="label label-warning"><%= license_name %></span>
+      <% else %>
+        <span ><%= license_name %></span>
+      <% end %>
+    </div>
+    <% license_hash[license_name].each do |dependency| %>
+      <span class="license_box"><a href="<%= product_url_for_projectdependency( dependency ) %>" ><%= dependency.name %></a></span>
     <% end %>
-  </div>
-  <% license_hash[license_name].each do |dependency| %>
-    <span class="license_box"><a href="<%= product_url_for_projectdependency( dependency ) %>" ><%= dependency.name %></a></span>
+    <br/><br/>
   <% end %>
-  <br/><br/>
-<% end %>
 
-<% if display_charts == true && license_hash.count > 1 %> 
-<div id='pie2' style="text-align: center;">
-</div>  
-<script type="text/javascript">
-  var pie = new d3pie("pie2", {
-    header: {
-      title: {
-        text: ""
+  <% if display_charts == true && license_hash.count > 1 %> 
+  <div id='pie2' style="text-align: center;">
+  </div>  
+  <script type="text/javascript">
+    var pie = new d3pie("pie2", {
+      header: {
+        title: {
+          text: ""
+        },
+        location: "pie-center"
       },
-      location: "pie-center"
-    },
-    size: {
-      pieInnerRadius: "70%"
-    },
-    data: {
-      sortOrder: "label-asc",
-      content: [
-        <% license_hash.sort.map do |license_name, value| %> 
-          <% if license_name.match(/\AGPL/) %>
-            { label: "<%= license_name %>", value: <%= license_hash[license_name].count %> , color: '#FF4000'},  
-          <% else %> 
-            { label: "<%= license_name %>", value: <%= license_hash[license_name].count %> },  
-          <% end %>  
-          
-        <% end %> 
-      ]
-    }
-  });
-</script>
-<br/><br/>
+      size: {
+        pieInnerRadius: "70%"
+      },
+      data: {
+        sortOrder: "label-asc",
+        content: [
+          <% license_hash.sort.map do |license_name, value| %> 
+            <% if license_name.match(/\AGPL/) %>
+              { label: "<%= license_name %>", value: <%= license_hash[license_name].count %> , color: '#FF4000'},  
+            <% else %> 
+              { label: "<%= license_name %>", value: <%= license_hash[license_name].count %> },  
+            <% end %>  
+            
+          <% end %> 
+        ]
+      }
+    });
+  </script>
+  <br/><br/>
+  <% end %>
 <% end %>
-
