--- a/app/views/user/projects/helpers/_project_numbers_sentence.html.erb
+++ b/app/views/user/projects/helpers/_project_numbers_sentence.html.erb
@@ -4,7 +4,7 @@
 </span> are outdated and <span style="color: <%= unknown_color(project)%>; font-weight: bold; font-size: 14px;" ><%= project[:unknown_number_sum] %></span> are unknown.
 <% show_license_number ||= nil %>
 <% if show_license_number && show_license_number == true && project.license_whitelist_id %> 
-  <span style="color: <%= outdated_color(project) %>; font-size: 14px; font-weight: bold;" >
+  <span style="color: <%= licenses_red_color(project) %>; font-size: 14px; font-weight: bold;" >
     <%= project[:licenses_red_sum] %>
   </span> violate the license whitelist.
 <% end %> 
