Little BugFix for SV count

--- a/app/views/user/projects/helpers/_project.html.erb
+++ b/app/views/user/projects/helpers/_project.html.erb
@@ -1,5 +1,5 @@
 <% tr_class='' %> 
-<% if project.sv_count > 0 %>
+<% if project.sv_count_sum > 0 %>
   <% tr_class='flash error' %>
 <% end %> 
 <tr class="<%= tr_class %>">
