--- a/app/views/user/projects/helpers/_security.html.erb
+++ b/app/views/user/projects/helpers/_security.html.erb
@@ -4,6 +4,8 @@
 <% if @project.language.eql?(Product::A_LANGUAGE_PHP) && !@project.filename.eql?('composer.lock') %> 
   <div class="alert falsh warning">
     For a composer.json file we don't know exactly which versions are locked on production. We assume that all version constraints are resolved to the newest version. For a more accurate resolution we need the composer.lock file. 
+    For more details read the 
+    <a href="https://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file">docs to composer.lock</a>.
   </div>
 <% end %> 
 
@@ -19,6 +21,7 @@
     <% dep.security_vulnerabilities.each do |sv| %>
       <ul> 
         <% sv.links.keys.each do |key| %>
+          <% next if key.to_s.empty? %>
           <li><a href="<%= sv.links[key] %>"><%= key %></a></li>
         <% end %> 
         <li>Affected versions: <%= sv.affected_versions_string %></li>
