--- a/app/views/user/projects/show.html.erb
+++ b/app/views/user/projects/show.html.erb
@@ -168,7 +168,7 @@
           <% if @project.language.eql?(Product::A_LANGUAGE_PHP) %> 
             <div id="security" class="tab-pane">
 
-              <%= render partial: "user/projects/helpers/show_subprojects", locals: {parent_project: @project, child_project: @child, tab_id: 'licenses'} %>
+              <%= render partial: "user/projects/helpers/show_subprojects", locals: {parent_project: @project, child_project: @child, tab_id: 'security'} %>
 
               <%= render partial: "user/projects/helpers/security" %>  
 
