Update numbers in sentences format.

--- a/app/views/user/projects/helpers/_license_number_sentence.html.erb
+++ b/app/views/user/projects/helpers/_license_number_sentence.html.erb
@@ -1,6 +1,10 @@
-<span style="font-size: 14px; font-weight: bold;"><%= project[:dep_number_sum] %></span> dependencies. 
+
+<span style="font-size: 14px; font-weight: bold;">
+  <%= pluralize(project[:dep_number_sum], "unique dependencies") %>.
+</span>
+
 <% if !@project.license_whitelist_id.to_s.empty? %> 
-  <span >
-    <%= project[:licenses_red] %> violate the license whitelist.
-  </span> 
+  <span style="color: <%= licenses_red_color(project) %>; font-size: 14px; font-weight: bold;" >
+    <%= pluralize( project[:licenses_red], "license whitelist violation") %>.
+  </span>
 <% end %> 
