--- a/app/views/user/projects/helpers/_project_numbers_sentence.html.erb
+++ b/app/views/user/projects/helpers/_project_numbers_sentence.html.erb
@@ -1,10 +1,27 @@
-<span style="font-size: 14px; font-weight: bold;"><%= project[:dep_number_sum] %></span> dependencies. 
-<span style="color: <%= outdated_color(project) %>; font-size: 14px; font-weight: bold;" >
-  <%= project[:out_number_sum] %>
-</span> are outdated and <span style="color: <%= unknown_color(project)%>; font-weight: bold; font-size: 14px;" ><%= project[:unknown_number_sum] %></span> are unknown.
+
+<span style="font-size: 14px; font-weight: bold;">
+  <%= pluralize(project[:dep_number_sum], "unique dependencies") %>.
+</span>
+
+<span style="color: <%= outdated_color(project) %>; font-size: 14px;" >
+  <%= project[:out_number_sum] %> outdated.
+</span>
+
+<span style="color: <%= unknown_color(project)%>; font-size: 14px;" >
+  <%= project[:unknown_number_sum] %> unknown.
+</span> 
+
+<% if project[:sv_count_sum].to_i > 0 %> 
+  <br/>
+  <span style="font-size: 14px; font-weight: bold; color: red;">
+    <%= pluralize(project[:sv_count_sum], "known security vulnerability") %>.
+  </span>  
+<% end %> 
+
 <% show_license_number ||= nil %>
 <% if show_license_number && show_license_number == true && project.license_whitelist_id %> 
+  <br/>
   <span style="color: <%= licenses_red_color(project) %>; font-size: 14px; font-weight: bold;" >
-    <%= project[:licenses_red_sum] %>
-  </span> violate the license whitelist.
+    <%= pluralize( project[:licenses_red_sum], "license whitelist violation") %>.
+  </span>
 <% end %> 
