--- a/app/views/user/projects/helpers/_show_dependencies.html.erb
+++ b/app/views/user/projects/helpers/_show_dependencies.html.erb
@@ -8,6 +8,7 @@
       <%= render :partial => "user/projects/helpers/project_numbers_sentence", :locals => { :project => proj } %><br/>
       <% if !proj[:dependencies].empty? %>
         <% add_dependency_classes proj %>
+        <% proj[:dependencies] = proj[:dependencies].sort_by {|dep| dep[:status_rank] } %> 
         <%= render partial: "project_dependency_table", locals: {deps: proj[:dependencies] } %>
       <% end %> 
       </br>
