Extending the FAQs.

--- a/app/views/page/faq.html.erb
+++ b/app/views/page/faq.html.erb
@@ -30,6 +30,14 @@
       We hope that GitHub will provide a read-only scope for private repositories in the near future.
     </p>
 
+    <h2>I can not see my GitHub Organisations?</h2>
+    <p class="l_faq_section">
+      Through the GitHub API we can only access organisatins where your membership is public. If somebody invites you to an organisation your membership in that organisation is NOT public, by default. Thtat means it will not show up at VersionEye. You have to make your membership in the organisation public to see the repositories of that organisation in VersionEye. 
+    </p>
+    <p style="text-align: center">
+      <%= image_tag "faq/github_orga.png", :style=>"width: 400px;" %>
+    </p>
+
     <h2>Can I trust VersionEye and give them full permission to read my private repositories?</h2>
     <p class="l_faq_section">
       Yes! We are based in Germany and you probably already know that the Germans are going crazy for privacy! VersionEye is always respecting your privacy! We are not interested in your code! We don't change it and we don't read it. We are only looking in your project root for a project file we can parse. That's all.<br/>
