--- a/app/views/page/faq.html.erb
+++ b/app/views/page/faq.html.erb
@@ -21,16 +21,16 @@
       The GitHub/Bitbucket integration is by far the most used integration at VersionEye. But there are many other ways to use this service.
     </p>
     <ul>
-      <li style="margin-bottom: 10px;">
+      <li style="margin-bottom: 12px;">
         <b>File Upload:</b> You can simply upload a project file to see the out-dated dependencies and the licenses. However that is more a one-time-thing for testing. You don't really want to manually upload your project files every day because that's a lot of work.
       </li>
-      <li style="margin-bottom: 10px;">
+      <li style="margin-bottom: 12px;">
         <b>URL:</b> You can create a VersionEye project from a URL to a project file. VersionEye will fetch your project file every day from the URL and notify you about out-dated dependencies and license violations.
       </li>
-      <li style="margin-bottom: 10px;">
+      <li style="margin-bottom: 12px;">
         <b>API:</b> You can use the <a href="https://www.versioneye.com/api/">VersionEye API</a> to create/update a project. There are already many open source tools build on top of the VersionEye API. For example the <a href="https://github.com/versioneye/versioneye_maven_plugin">VersionEye Maven Plugin</a>. 
       </li>
-      <li style="margin-bottom: 10px;">
+      <li style="margin-bottom: 12px;">
         <b>VersionEye Enterprise:</b> Everything you see here you can have as an on-premise solution. You can host <a href="https://www.versioneye.com/enterprise">VersionEye Enterprise</a> on your own hardware in your own datacenter. That way you are in full control of the privacy. 
       </li>
     </ul>
@@ -75,6 +75,12 @@
     <p class="l_faq_section">
       We try to send out as less emails as possible and as much as necessary!
     </p>
+
+    <h2>What happens with migrated / moved packages?</h2>
+    <p class="l_faq_section">
+      Sometimes a software library is changing his namespace. That is specially a common case in the Java community. For example <a href="https://www.versioneye.com/java/pdfbox:pdfbox/0.7.3">pdfbox:pdfbox:0.7.3</a> moved to <a href="https://www.versioneye.com/java/org.apache.pdfbox:pdfbox/1.8.9">org.apache.pdfbox:pdfbox:1.8.9</a>. Indeed it's the same project. Currently VersionEye is not handling this problem. Might be that in future we make a connection between those migrated libraries, but right now not. 
+    </p>
+    
   
   </div>
 
