--- a/app/views/user/projects/_project_dependency_table.html.erb
+++ b/app/views/user/projects/_project_dependency_table.html.erb
@@ -3,9 +3,9 @@
     <thead style="height: 30px;">
       <tr>
         <th >&nbsp;</th>
-        <th >Current</th>
-        <th >Locked</th>
         <th class="name_col_after_icon">Dependency</th>
+        <th >Resolved</th>
+        <th >Newest</th>
         <th style="width: 76px;">&nbsp;</th>
       </tr>
     </thead>
