--- a/app/views/user/projects/helpers/_show_licenses.html.erb
+++ b/app/views/user/projects/helpers/_show_licenses.html.erb
@@ -1,9 +1,11 @@
 
 <% if @summary  %>
   
-  <div style="margin: 10px 0 7px 0;">
-    <%= link_to 'BoM PDF Export', lwl_export_user_project_path( @project.ids ) %>
-  </div>
+  <% if @project && @project.license_whitelist_id.to_s.empty? %>
+    <div style="margin: 10px 0 7px 0;">
+      <%= link_to 'BoM PDF Export', lwl_export_user_project_path( @project.ids ) %>
+    </div>
+  <% end %> 
 
   <% @summary.keys.each do |key| %>
     <% proj = @summary[key] %> 
