--- a/app/views/layouts/_footer_content.html.erb
+++ b/app/views/layouts/_footer_content.html.erb
@@ -37,10 +37,13 @@
     <a href="/php" >PHP</a> |
     <a href="/nodejs" >Node.JS</a> |
     <a href="/javascript" >JavaScript</a> |
+    <a href="/coffeescript" >CoffeeScript</a> |
+    <a href="/css" >CSS</a> |
+    <a href="/HTML" >HTML</a> |
     <a href="/objective-c" >Objective-C</a> |
     <a href="/clojure" >Clojure</a> |
-    <a href="/css" >CSS</a> |
-    <a href="/r" >R</a>
+    <a href="/r" >R</a> | 
+    <a href="/biicode" >biicode</a>
   </div>
 
 </footer>
