Show released ago on search results.

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -86,9 +86,13 @@ h3.side_header{
   font-style: italic;
 }
 
-.meta_reference{
+.meta_info_bold{
   font-size: 13px;
   font-weight: bold;
+}
+
+.meta_info{
+  font-size: 13px;
 }
 
 .meta_prod_description{
