--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -30,7 +30,7 @@
             <% else %>
               <span class="meta_prod_description"><%= product.short_summary %></span><br/>
             <% end %>
-            <span class="meta_reference" >References: <%= link_to product.used_by_count, product_references_path( :lang => product.language_esc, :key => product.to_param ) %></span>
+            <span class="meta_info" >References: <%= link_to product.used_by_count, product_references_path( :lang => product.language_esc, :key => product.to_param ) %></span>
           </div>
         </div>
       <% end %>
